[Docs] Fix the google slides on mobile

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -196,3 +196,43 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
+
+
+.google-slides-section {
+  padding: 3rem 0;
+  background-color: #f5f5f5;
+}
+
+.google-slides-container {
+  width: 100%;
+  max-width: 1200px; /* Increased maximum width */
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+.responsive-iframe-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio */
+}
+
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
+@media screen and (min-width: 1024px) {
+  .google-slides-section {
+    padding: 4rem 0;
+  }
+
+  .responsive-iframe-container {
+    height: 75vh; /* Set a large fixed height for larger screens */
+    padding-top: 0; /* Remove padding-top for larger screens */
+  }
+}
